# nodeflare

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  README.md  docker-compose.yml  fly.api.toml  fly.proxy.toml  fly.toml  fly.web.toml
apps/web/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/api/blog/: route.ts
apps/web/src/app/auth/callback/: page.tsx
apps/web/src/app/blog/: page.tsx
apps/web/src/app/blog/[slug]/: page.tsx
apps/web/src/app/contact/: page.tsx
apps/web/src/app/dashboard/: layout.tsx  page.tsx
apps/web/src/app/dashboard/admin/announcements/: page.tsx
apps/web/src/app/dashboard/api-keys/: page.tsx
apps/web/src/app/dashboard/billing/: page.tsx
apps/web/src/app/dashboard/billing/cancel/: page.tsx
apps/web/src/app/dashboard/billing/success/: page.tsx
apps/web/src/app/dashboard/logs/: page.tsx
apps/web/src/app/dashboard/servers/: page.tsx
apps/web/src/app/dashboard/servers/[id]/: page.tsx
apps/web/src/app/dashboard/servers/new/: page.tsx
apps/web/src/app/dashboard/settings/: page.tsx
apps/web/src/app/dashboard/team/: page.tsx
apps/web/src/app/dashboard/vpn/: page.tsx
apps/web/src/app/docs/: page.tsx
apps/web/src/app/faq/: page.tsx
apps/web/src/app/pricing/: page.tsx
apps/web/src/components/: locale-switcher.tsx  providers.tsx
apps/web/src/components/deployment/: build-logs-panel.tsx  build-logs.tsx  deployment-progress.tsx  index.ts  server-logs.tsx
apps/web/src/components/layout/: footer.tsx  header.tsx
apps/web/src/components/ui/: button.tsx  card.tsx  input.tsx  tabs.tsx
apps/web/src/hooks/: use-auth.ts  use-websocket.ts
apps/web/src/i18n/: config.ts  request.ts
apps/web/src/i18n/messages/: en.json  ja.json
apps/web/src/lib/: api.ts  hygraph.ts  plans.ts
apps/web/src/types/: index.ts
crates/api/: Cargo.toml
crates/api/src/: cache.rs  error.rs  main.rs  redis_subscriber.rs  state.rs  ws_manager.rs
crates/api/src/extractors/: auth.rs  mod.rs  workspace.rs
crates/api/src/middleware/: mod.rs  rate_limit.rs
crates/api/src/routes/: announcements.rs  api_keys.rs  auth.rs  billing.rs  console.rs  contact.rs  deployments.rs  github.rs  health.rs  logs.rs  members.rs  mod.rs  notifications.rs  openapi.rs  regions.rs  secrets.rs  servers.rs  tools.rs  user_preferences.rs  webhooks.rs  wireguard.rs  workspaces.rs  ws.rs
crates/auth/: Cargo.toml
crates/auth/src/: api_key.rs  crypto.rs  github.rs  jwt.rs  lib.rs  password.rs
crates/billing/: Cargo.toml
crates/billing/src/: lib.rs  plans.rs  service.rs  webhook.rs
crates/builder/: Cargo.toml
crates/builder/src/: docker.rs  flyio.rs  main.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  error.rs  events.rs  lib.rs  types.rs
crates/container/: Cargo.toml
crates/container/src/: docker.rs  flyio.rs  lib.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs
crates/db/src/models/: announcement.rs  api_key.rs  contact_message.rs  deploy_webhook.rs  deployment.rs  mod.rs  notification_settings.rs  request_log.rs  secret.rs  server.rs  server_region.rs  tool.rs  user.rs  user_preferences.rs  workspace.rs
crates/db/src/repositories/: announcement_repo.rs  api_key_repo.rs  contact_message_repo.rs  deploy_webhook_repo.rs  deployment_repo.rs  mod.rs  notification_settings_repo.rs  request_log_repo.rs  secret_repo.rs  server_region_repo.rs  server_repo.rs  tool_repo.rs  user_preferences_repo.rs  user_repo.rs  workspace_repo.rs
crates/email/: Cargo.toml
crates/email/src/: lib.rs  resend.rs  templates.rs
crates/github/: Cargo.toml
crates/github/src/: lib.rs
crates/mcp-runtime/: Cargo.toml
crates/mcp-runtime/src/: lib.rs
crates/proxy/: Cargo.toml
crates/proxy/src/: auth.rs  cache.rs  main.rs  rate_limit.rs  redis_cache.rs
crates/queue/: Cargo.toml
crates/queue/src/: lib.rs
docker/: Dockerfile.api  Dockerfile.builder  Dockerfile.proxy
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  SECURITY.md
migrations/: 20240101000000_initial.sql  20240102000000_add_constraints.sql  20240103000000_add_rate_limit.sql  20240104000000_add_github_token.sql  20240105000000_add_stripe_billing.sql  20240106000000_add_contact_messages.sql  20240107000000_fix_api_key_prefix_length.sql  20240108000000_add_announcements.sql  20240109000000_add_user_preferences.sql  20240109000001_add_notification_settings.sql  20240110000000_add_deploy_webhooks.sql  20240111000000_add_user_admin_flag.sql  20240112000000_add_server_region.sql  20240113000000_add_multi_region.sql  20240114000000_add_region_subscription_item.sql  20240115000000_add_root_directory.sql  20240116000000_add_billing_settings.sql  20240117000000_add_performance_indexes.sql  20240118000000_encrypt_webhook_secrets.sql  20240119000000_add_additional_performance_indexes.sql
scripts/: generate_test_token.rs  test_all_api.sh  test_authenticated_api.sh  test_plan_features.sh
