[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/db",
    "crates/auth",
    "crates/queue",
    "crates/github",
    "crates/container",
    "crates/mcp-runtime",
    "crates/email",
    "crates/api",
    "crates/proxy",
    "crates/builder",
    "crates/billing",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/yourusername/mcp-cloud"
authors = ["Your Name <your@email.com>"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header", "cookie"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "request-id", "timeout", "set-header", "limit"] }
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls-ring", "postgres", "uuid", "chrono", "json"] }

# Redis
fred = { version = "8.0", features = ["enable-rustls"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Auth
jsonwebtoken = "9.3"
argon2 = "0.5"
oauth2 = "4.4"
ring = "0.17"

# Validation
validator = { version = "0.19", features = ["derive"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# OpenAPI
utoipa = { version = "4", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }
utoipa-scalar = { version = "0.1", features = ["axum"] }

# Utils
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
base64 = "0.22"
rand = "0.8"
hex = "0.4"
dotenvy = "0.15"
config = "0.14"

# Job queue
apalis = "0.6"
apalis-redis = "0.6"

# Docker
bollard = "0.18"

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Bytes
bytes = "1.9"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3
