[package]
name = "mcp-auth"
version.workspace = true
edition.workspace = true

[dependencies]
mcp-common = { path = "../common" }
mcp-db = { path = "../db" }

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
jsonwebtoken.workspace = true
argon2.workspace = true
oauth2.workspace = true
reqwest.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
rand.workspace = true
hex.workspace = true
base64.workspace = true
ring.workspace = true
subtle = "2.5"
sqlx.workspace = true
url.workspace = true
