[package]
name = "mcp-billing"
version.workspace = true
edition.workspace = true

[dependencies]
mcp-common = { path = "../common" }
mcp-db = { path = "../db" }

# Async
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true

# Stripe (full feature needed because webhook-events depends on all types)
stripe = { package = "async-stripe", version = "0.39", default-features = false, features = [
    "runtime-tokio-hyper-rustls",
    "full",
    "webhook-events",
] }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

# Utils
uuid.workspace = true
chrono.workspace = true
