[package]
name = "mcp-common"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
validator.workspace = true
config.workspace = true
dotenvy.workspace = true
url.workspace = true
once_cell = "1.20"
regex = "1.11"

# For error types - we reference these even if not directly used
sqlx.workspace = true
jsonwebtoken.workspace = true
fred.workspace = true
