[package]
name = "mcp-container"
version.workspace = true
edition.workspace = true

[dependencies]
mcp-common = { path = "../common" }

tokio.workspace = true
bollard.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
futures.workspace = true
async-trait = "0.1"
