[package]
name = "mcp-email"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true

# HTML templating
minijinja = "2"
