[package]
name = "mcp-github"
version.workspace = true
edition.workspace = true

[dependencies]
mcp-common = { path = "../common" }

tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
jsonwebtoken.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
base64.workspace = true
ring.workspace = true
hex.workspace = true
